--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p style="color:green">
         Olá, Mundo!
     </p>
+    <img src="pordosol.png" alt="Por do Sol no planeta terra visto do espaço.">
 </body>
 
 </html>
